force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/PJN_DocuSign_One_Click_Setting__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: DocuSign One Click
Purpose: A configuration record for the DocuSign One Click functionality. This is the first step in setting up the Docusign One Click custom metadata.
Metadata Relationship(s): Program; DocuSign One Click Recipient.
Created by Mavens: Yes</description>
    <label>DocuSign One Click Setting</label>
    <pluralLabel>DocuSign One Click Settings</pluralLabel>
</CustomObject>