force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Additional_Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>PJN_Additional_Filter_Field__c</fullName>
    <description>The API Name of the field on the SObject which can be referenced to test whether this record matches.</description>
    <inlineHelpText>The API Name of the field on the SObject which can be referenced to test whether this record matches.</inlineHelpText>
    <label>Additional Filter Field</label>
    <length>83</length>
    <type>Text</type>
</CustomField>