force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Additional_Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>PJN_Additional_Filter_Value__c</fullName>
    <description>The value to test for when evaluating the Additional Filter Field to determine whether this record can be used.</description>
    <inlineHelpText>The value to test for when evaluating the Additional Filter Field to determine whether this record can be used.</inlineHelpText>
    <label>Additional Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>