force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Custom_Contact_Note_Map__c.field-meta.xml
<CustomField>
    <fullName>PJN_Custom_Contact_Note_Map__c</fullName>
    <description>Defines a custom note for contacts. (e.g. Decision Maker~Note for DM; Economic Buyer~Note For EB; DEFAULT_NOTE~Default Note). Default is no note</description>
    <inlineHelpText>Defines a custom note for contacts. (e.g. Decision Maker~Note for DM; Economic Buyer~Note For EB; DEFAULT_NOTE~Default Note). Default is no note</inlineHelpText>
    <label>Custom Contact Note Map</label>
    <length>255</length>
    <type>Text</type>
</CustomField>