force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Custom_Contact_Role_Map__c.field-meta.xml
<CustomField>
    <fullName>PJN_Custom_Contact_Role_Map__c</fullName>
    <description>Defines a custom contact Role Map (e.g. Decision Maker~Signer1; Economic Buyer~Carbon Copy). Maps to &quot;CCRM&quot;.</description>
    <inlineHelpText>Defines a custom contact Role Map (e.g. Decision Maker~Signer1; Economic Buyer~Carbon Copy). Maps to &quot;CCRM&quot;.</inlineHelpText>
    <label>Custom Contact Role Map</label>
    <length>255</length>
    <type>Text</type>
</CustomField>