force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Custom_Contact_Type_Map__c.field-meta.xml
<CustomField>
    <fullName>PJN_Custom_Contact_Type_Map__c</fullName>
    <description>Defines a custom contact type map. (e.g. Decision Maker~Signer; Economic Buyer~Carbon Copy). Default is Signer. Maps to &quot;CCTM&quot;</description>
    <inlineHelpText>Defines a custom contact type map. (e.g. Decision Maker~Signer; Economic Buyer~Carbon Copy). Default is Signer. Maps to &quot;CCTM&quot;</inlineHelpText>
    <label>Custom Contact Type Map</label>
    <length>255</length>
    <type>Text</type>
</CustomField>