force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Custom_Email_Message__c.field-meta.xml
<CustomField>
    <fullName>PJN_Custom_Email_Message__c</fullName>
    <description>The body of the email to send. e.g. Envelope sent by [FirstName] [LastName] ([Email])! Maps to &quot;CEM&quot;</description>
    <inlineHelpText>The body of the email to send. e.g. Envelope sent by [FirstName] [LastName] ([Email])! Maps to &quot;CEM&quot;</inlineHelpText>
    <label>Custom Email Message</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>