force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Custom_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>PJN_Custom_Email_Subject__c</fullName>
    <description>The subject of the email to send. e.g. Re: Opportunity Name: {!Opportunity.Name}. Maps to &quot;CES&quot;</description>
    <inlineHelpText>The subject of the email to send. e.g. Re: Opportunity Name: {!Opportunity.Name}. Maps to &quot;CES&quot;</inlineHelpText>
    <label>Custom Email Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>