force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Custom_Related_Contact_List__c.field-meta.xml
<CustomField>
    <fullName>PJN_Custom_Related_Contact_List__c</fullName>
    <description>Defines a custom related list to use for defining Recipients. (See DocuSign documentation for more information). Maps to &quot;CRCL&quot;.</description>
    <inlineHelpText>Defines a custom related list to use for defining Recipients. (See DocuSign documentation for more information). Maps to &quot;CRCL&quot;.</inlineHelpText>
    <label>Custom Related Contact List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>