force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Load_Attachments__c.field-meta.xml
<CustomField>
    <fullName>PJN_Load_Attachments__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicate whether to load attachments. When ON, all items in Attachments are added to the envelope. This parameter is typically used with the DocuSign Template option, because the documents are supplied by the template. Maps to &quot;LA&quot;.</description>
    <inlineHelpText>Indicate whether to load attachments. When ON, all items in Attachments are added to the envelope. This parameter is typically used with the DocuSign Template option, because the documents are supplied by the template. Maps to &quot;LA&quot;.</inlineHelpText>
    <label>Load Attachments</label>
    <type>Checkbox</type>
</CustomField>