force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Load_Default_Contacts__c.field-meta.xml
<CustomField>
    <fullName>PJN_Load_Default_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The LoadDefaultContacts parameter determines if default contacts for the source object type are loaded. These contacts will be loaded after the Custom Related Contacts recipients. If no value is supplied, the standard contact selection applies.</description>
    <inlineHelpText>The LoadDefaultContacts parameter determines if default contacts for the source object type are loaded These contacts will be loaded after the Custom Related Contacts recipients.</inlineHelpText>
    <label>Load Default Contacts</label>
    <type>Checkbox</type>
</CustomField>