force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Load_Files__c.field-meta.xml
<CustomField>
    <fullName>PJN_Load_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to Load Files. When ON, all files attached to the Salesforce Object are added to the envelope.&lt;br&gt;Maps to property &quot;LF&quot;.</description>
    <inlineHelpText>Indicates whether to Load Files. When ON, all files attached to the Salesforce Object are added to the envelope.&lt;br&gt;Maps to property &quot;LF&quot;.</inlineHelpText>
    <label>Load Files</label>
    <type>Checkbox</type>
</CustomField>