force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_One_Click_Options__c.field-meta.xml
<CustomField>
    <fullName>PJN_One_Click_Options__c</fullName>
    <description>Defines whether to Send or Tag. Send will attempt to send immediate. Tag will navigate the use to the Tag screen. Default is Send. Maps to &quot;OCO&quot;.</description>
    <inlineHelpText>Defines whether to Send or Tag. Send will attempt to send immediate. Tag will navigate the use to the Tag screen. Default is Send. Maps to &quot;OCO&quot;.</inlineHelpText>
    <label>One Click Options</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send</fullName>
                <default>true</default>
                <label>Send</label>
            </value>
            <value>
                <fullName>Tag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>