force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Program__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program__c</fullName>
    <description>The program this configuration belongs to.</description>
    <inlineHelpText>The program this configuration belongs to.</inlineHelpText>
    <label>Program</label>
    <referenceTo>PJN_Program__mdt</referenceTo>
    <relationshipLabel>DocuSign One Click Settings</relationshipLabel>
    <relationshipName>DocuSign_One_Click_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>