force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Program_Field__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program_Field__c</fullName>
    <description>Path to the field that defines the program</description>
    <inlineHelpText>Path to the field that defines the program</inlineHelpText>
    <label>Program Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>