force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Recipient_Routing_Order_Sequential__c.field-meta.xml
<CustomField>
    <fullName>PJN_Recipient_Routing_Order_Sequential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the signing order is Sequential or Parallel. Maps to &quot;RROS&quot;</description>
    <inlineHelpText>Indicates whether the signing order is Sequential or Parallel. Maps to &quot;RROS&quot;</inlineHelpText>
    <label>Recipient Routing Order Sequential</label>
    <type>Checkbox</type>
</CustomField>