force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Recipient_Signer_Limit__c.field-meta.xml
<CustomField>
    <fullName>PJN_Recipient_Signer_Limit__c</fullName>
    <description>Sets the limit on the number of signers. Maps to &quot;RSL&quot;.</description>
    <inlineHelpText>Sets the limit on the number of signers. Maps to &quot;RSL&quot;.</inlineHelpText>
    <label>Recipient Signer Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>