force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Recipient_Starting_Routing_Order__c.field-meta.xml
<CustomField>
    <fullName>PJN_Recipient_Starting_Routing_Order__c</fullName>
    <description>Sets the starting order to something other than 1 for a template. Maps to &quot;RSRO&quot;</description>
    <inlineHelpText>Sets the starting order to something other than 1 for a template. Maps to &quot;RSRO&quot;</inlineHelpText>
    <label>Recipient Starting Routing Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>