force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Record_Type__c</fullName>
    <description>The Record Type Developer name used to filter this configuration.</description>
    <inlineHelpText>The Record Type Developer name used to filter this configuration.</inlineHelpText>
    <label>Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>