force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Related_Content__c.field-meta.xml
<CustomField>
    <fullName>PJN_Related_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include related content for the source object. The Related Content related list must be added to an object layout to use this parameter. (See DocuSign documentation for more info.) Maps to &quot;RC&quot;.</description>
    <inlineHelpText>Include related content for the source object. The Related Content related list must be added to an object layout to use this parameter. (See DocuSign documentation for more info.) Maps to &quot;RC&quot;.</inlineHelpText>
    <label>Related Content</label>
    <type>Checkbox</type>
</CustomField>