force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_SObject__c.field-meta.xml
<CustomField>
    <fullName>PJN_SObject__c</fullName>
    <description>The API Name of the SObject this configuration belongs to.</description>
    <inlineHelpText>The API Name of the SObject this configuration belongs to.</inlineHelpText>
    <label>SObject</label>
    <length>83</length>
    <required>true</required>
    <type>Text</type>
</CustomField>