force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Template_Name__c</fullName>
    <description>The name of the DocuSign template. This is used to find the custom setting and get the Id configured for this environment for this Template.</description>
    <inlineHelpText>The name of the DocuSign template. This is used to find the custom setting and get the Id configured for this environment for this Template.</inlineHelpText>
    <label>Template Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>