force-app/main/default/src/objects/PJN_DocuSign_One_Click_Setting__mdt/fields/PJN_Use_Custom_Recipients__c.field-meta.xml
<CustomField>
    <fullName>PJN_Use_Custom_Recipients__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true then the custom recipient list will be defined using Custom Recipient records related to this record. Maps to &quot;CRL&quot;.</description>
    <inlineHelpText>If true then the custom recipient list will be defined using Custom Recipient records related to this record. Maps to &quot;CRL&quot;.</inlineHelpText>
    <label>Use Custom Recipients</label>
    <type>Checkbox</type>
</CustomField>